--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
       stroke-linecap: round;
       transform: rotate(-90deg);
       transform-origin: 50% 50%;
-      stroke-dasharray: 314; /* 2 * π * r = 2 * π * 50 */
+      stroke-dasharray: 314; 
       stroke-dashoffset: 314;
-      animation: fillCircle 3s linear infinite;
+      animation: fillCircle 1s linear infinite;
     }
 
     @keyframes fillCircle {
@@ -48,7 +48,7 @@
   <script>
     setTimeout(() => {
         window.location.href = "../pages/index.php"
-    }, 3001);
+    }, 955);
   </script>
 </body>
 </html>
